--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,2 +1,3 @@
 <h1><%= @post.title %></h1><br>
 <p><%= @post.body %></p>
+<%= link_to "delete", post_path(@post), :method =>:delete, :confirm => "Reallu delete this article"%>
