--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -4,6 +4,10 @@
     <%= f.text_field :title %>
   </p>
   <p>
+    <%= f.label :author %><br />
+    <%= f.text_field :author %>
+  </p>
+  <p>
     <%= f.label :body %><br />
     <%= f.text_area :body %>
   </p>
