fixed edit and added authors to all posts

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,7 +3,8 @@
 <ul>
   <% @posts.each do |post| %>
     <li>
-    	<%= link_to post.title, post_path(post), :class => 'post_title', :id => "post_#{post.id}" %>
+    	<%= link_to post.title, post_path(post), :class => 'post_title', :id => "post_#{post.id}" %><br>
+    	<p>Written By: <%= post.author %></p>	
     	<p> 
     		<%= truncate(post.body, :length => 500, :separator => ' ', :omission => '... ' ) %>
     		<%= link_to "(continued)", post_path(post), :class => 'post_title', :id => "post_#{post.id}" %>
