--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,6 @@
-<h1><%= @post.title %></h1><br>
-
+<h1><%= @post.title %></h1>
+<p><%= @post.author %></p>
 <p><%= @post.body %></p>
-
 <ul>
 	<li>
 		<%= link_to "edit", edit_post_path(@post) %>
