stumped on comments error on root/post/id page

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,7 +4,8 @@
   <% @posts.each do |post| %>
     <li>
     	<%= link_to post.title, post_path(post), :class => 'post_title', :id => "post_#{post.id}" %><br>
-    	<p>Written By: <%= post.author %></p>	
+    	<p>By: <%= post.author  %>, <%= post.created_at.strftime("%m/%d/%Y") %> <%= post.created_at.strftime("At %I:%M%p") %></p>	
+
     	<p> 
     		<%= truncate(post.body, :length => 500, :separator => ' ', :omission => '... ' ) %>
     		<%= link_to "(continued)", post_path(post), :class => 'post_title', :id => "post_#{post.id}" %>
