--- a/app/views/posts/_comment.html.erb
+++ b/app/views/posts/_comment.html.erb
@@ -1,5 +1,5 @@
 <div class="comment">
   <h4>Comment by <%= comment.author_name %></h4>
   <p><%= comment.body %></p>
-  <p>Posted <%= distance_of_time_in_words(comment.post.created_at, comment.created_at) %> ago</p>
+  <p>Posted <%= time_ago_in_words(comment.created_at) %> ago</p>
 </div>
