--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@post) do |f| %>
+<%= form_for @post, :url => post_path, :html => { :multipart => true } do |f| %>
   <p>
     <%= f.label :title %><br />
     <%= f.text_field :title %>
@@ -7,6 +7,10 @@
     <%= f.label :author %><br />
     <%= f.text_field :author %>
   </p>
+<p>
+  <%= f.label :img %><br />
+  <%= f.file_field :img %>
+</p>
   <p>
     <%= f.label :body %><br />
     <%= f.text_area :body %>
