cancan simi working having iuses loading /new and /posts/:id destory func

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,7 +14,7 @@
 
 <%= link_to "edit", edit_post_path(@post) if can? :update, @post %>
 <%= link_to "delete", post_path(@post) if can? :destroy, @post, :method =>:delete, :confirm => "Reallu delete this article"%>
-<%= link_to "Back to Articles List", post_path %>
+<%= link_to "Back to Articles List", posts_path %>
 
 
 <%= render :partial => 'comment', :collection => @post.comments %>
