--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,19 +4,32 @@
       <span class = "post_header"><h1>Articles</h1></span>  
         <article class = "post"> 
          <% @posts.each do |post| %>
-            <h2><%= link_to post.title, post_path(post), :class => 'post_title', :id => "post_#{post.id}" %></h2>
-             <p class ="post_body_sample">By: <%= post.author  %>, <%= post.created_at.strftime("%m/%d/%Y") %> <%= post.created_at.strftime("At %I:%M%p") %></p>
+            <h2>
+                <%= link_to post.title, post_path(post), :class => 'post_title', :id => "post_#{post.id}" %>
+                    <span class = "author_timestamp">
+                        By: <%= post.author  %>, <%= post.created_at.strftime("%m/%d/%Y") %> <%= post.created_at.strftime("At %I:%M%p") %>
+                    </span>
+            </h2>
                 <% if post.img? %>
-                        <%= image_tag post.img.url(:thumb) %>
-                <% end %>
-           	
+                    <%= image_tag post.img.url(:thumb) %>
 
-            <p class = "post_body_sample"> 
-            	<%= truncate(post.body, :length => 500, :separator => ' ', :omission => '... ' ) %>
-            	<%= link_to "(continued)", post_path(post), :class => 'post_title', :id => "post_#{post.id}" %>
-            </p>
+                    <div class = "sample_body_img">
+                        <p class = "post_body_sample"> 
+                            <%= truncate(post.body, :length => 635, :separator => ' ', :omission => '... ' ) %>
+                            <%= link_to "(continued)", post_path(post), :class => 'post_title', :id => "post_#{post.id}" %>
+                        </p>
+                    </div>
+
+                <% else %>
+
+                    <div class = "sample_body">
+                        <p class = "post_body_sample"> 
+                            <%= truncate(post.body, :length => 1000, :separator => ' ', :omission => '... ' ) %>
+                            <%= link_to "(continued)", post_path(post), :class => 'post_title', :id => "post_#{post.id}" %>
+                        </p>
+                    </div>
+                <% end %>    
          <% end %>
         </article>
+       <div class = "pagination"> <%= will_paginate @posts %> </div>
     </div>
-
-<%= will_paginate @posts %>
