--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,35 +1,47 @@
 
+    <div class="field">
+        <div class = "contaner">
+          <span class = "post_header"><h1>Articles</h1></span>  
+            <article class = "post"> 
+             <% @posts.each do |post| %>
+                <h2>
+                    <%= link_to post.title, post_path(post), :class => 'post_title', :id => "post_#{post.id}" %>
+                        <span class = "author_timestamp">
+                            By: <%= post.author  %>, <%= post.created_at.strftime("%m/%d/%Y") %> <%= post.created_at.strftime("At %I:%M%p") %>
+                        </span>
+                </h2>
+                    <% if post.img? %>
+                        <%= image_tag post.img.url(:thumb) %>
 
-    <div class = "contaner">
-      <span class = "post_header"><h1>Articles</h1></span>  
-        <article class = "post"> 
-         <% @posts.each do |post| %>
-            <h2>
-                <%= link_to post.title, post_path(post), :class => 'post_title', :id => "post_#{post.id}" %>
-                    <span class = "author_timestamp">
-                        By: <%= post.author  %>, <%= post.created_at.strftime("%m/%d/%Y") %> <%= post.created_at.strftime("At %I:%M%p") %>
-                    </span>
-            </h2>
-                <% if post.img? %>
-                    <%= image_tag post.img.url(:thumb) %>
+                        <div class = "sample_body_img">
+                            <p class = "post_body_sample"> 
+                                <%= truncate(post.body, :length => 635, :separator => ' ', :omission => '... ' ) %>
+                                <%= link_to "(continued)", post_path(post), :class => 'post_title', :id => "post_#{post.id}" %>
+                            </p>
+                        </div>
 
-                    <div class = "sample_body_img">
-                        <p class = "post_body_sample"> 
-                            <%= truncate(post.body, :length => 635, :separator => ' ', :omission => '... ' ) %>
-                            <%= link_to "(continued)", post_path(post), :class => 'post_title', :id => "post_#{post.id}" %>
-                        </p>
-                    </div>
+                    <% else %>
 
-                <% else %>
-
-                    <div class = "sample_body">
-                        <p class = "post_body_sample"> 
-                            <%= truncate(post.body, :length => 1000, :separator => ' ', :omission => '... ' ) %>
-                            <%= link_to "(continued)", post_path(post), :class => 'post_title', :id => "post_#{post.id}" %>
-                        </p>
-                    </div>
-                <% end %>    
-         <% end %>
-        </article>
-       <div class = "pagination"> <%= will_paginate @posts %> </div>
+                        <div class = "sample_body">
+                            <p class = "post_body_sample"> 
+                                <%= truncate(post.body, :length => 1000, :separator => ' ', :omission => '... ' ) %>
+                                <%= link_to "(continued)", post_path(post), :class => 'post_title', :id => "post_#{post.id}" %>
+                            </p>
+                        </div>
+                    <% end %>    
+             <% end %>
+            </article>
+           <div class = "pagination"> <%= will_paginate @posts %> </div>
+        </div>
+            <div class="side_bar">
+                <ul>
+                    <li>Important List </li>
+                    <li>Important List </li>
+                    <li>Important List </li>
+                    <li>Important List </li>
+                    <li>Important List </li>
+                    <li>Important List </li>
+                    <li>Important List </li>
+                </ul>
+            </div>
     </div>
