--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,10 @@
 		<li><a href="#">About</a><span class= "devider"> /</span></li>
 		<li><a href="#">Contact</a></li>
 	</ul>
+	<form name="input" action="html_form_action.asp" method="get">
+Search: <input type="text" name="" />
+<input type="" value="" />
+</form>
 </div>
 </header>
 
