more css git add .!

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,21 +1,37 @@
-<h1><%= @post.title %></h1>
-
-	<% if @post.img? %>
-			<%= image_tag @post.img.url(:medium) %>
-	<% end %>
-
-<p>
-	By: <%= @post.author  %>, <%= @post.created_at.strftime("%m/%d/%Y") %> <%= @post.created_at.strftime("At %I:%M%p") %>
-</p>	
-
-<p>
-	<%= @post.body %>
-</p>
-
-<%= link_to "edit", edit_post_path(@post) if can? :update, @post %>
-<%= link_to "delete", post_path(@post) if can? :destroy, @post, :method =>:delete, :confirm => "Reallu delete this article"%>
-<%= link_to "Back to Articles List", posts_path %>
 
 
-<%= render :partial => 'comment', :collection => @post.comments %>
-<%= render :partial => 'comment_form' %>
+<div class="field">
+        <div class = "contaner">
+          <span class = "post_header"><h1>Articles</h1></span>  
+            <article class = "post"> 
+                <h2>
+                    <%= @post.title %>
+                        <span class = "author_timestamp">
+                            By: <%= @post.author  %>, <%= @post.created_at.strftime("%m/%d/%Y") %> <%= @post.created_at.strftime("At %I:%M%p") %>
+                        </span>
+                </h2>
+									<% if @post.img? %>
+											<%= image_tag @post.img.url(:medium) %>
+									<% end %>
+                <p>
+									<%= @post.body %>
+								</p>
+            </article>
+            <%= link_to "edit", edit_post_path(@post) if can? :update, @post %>
+						<%= link_to "delete", post_path(@post) if can? :destroy, @post, :method =>:delete, :confirm => "Reallu delete this article"%>
+						<%= link_to "Back to Articles List", posts_path %>
+						<%= render :partial => 'comment', :collection => @post.comments %>
+						<%= render :partial => 'comment_form' %>
+        </div>
+            <div class="side_bar">
+                <ul>
+                    <li>Important List </li>
+                    <li>Important List </li>
+                    <li>Important List </li>
+                    <li>Important List </li>
+                    <li>Important List </li>
+                    <li>Important List </li>
+                    <li>Important List </li>
+                </ul>
+            </div>
+    </div>
