--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,14 +11,31 @@
  *= require_self
  *= require_tree .
  */
+
+/* ---------
+*
+*	Layout
+* 
+*---------*/
+
+/* ---------
+*	
+*	Comment Form
+* 
+*---------*/
+
+
 .lower_header {
 	height: 100px;
 	margin: 0 auto;
 	width: 1020px;
+	border-bottom: 1px solid #E3E3E8;
+	border-top: 1px solid #E3e3E8;
+	margin-bottom: 30px
 }
 
 .header_links {
-	margin: 0;
+	margin: 0 auto;
 	padding: 0;
 	list-style: none;
 	font-size: 13px;
@@ -29,10 +46,9 @@
 	position: relative;
 	float: left;
 	margin: 0 10px 0 0;
-
 }
 .header_links a{
-	padding-bottom: 64px;
+	padding-bottom: 66px;
 	color: #333;
 text-decoration: none;
 font-weight: bold;
@@ -41,6 +57,12 @@ font-weight: bold;
 .header_links a:hover{
 	color: #FF4629;
 	border-bottom: 3px solid #333;
+}
+.header_paths{
+	width: 235px;
+	margin: 0 auto;
+	padding: 12px;
+
 }
 
 h2 {
@@ -57,14 +79,120 @@ color: black;
 .contaner{
 	width: 700px;
 	float: left;
-	padding: 3px;
+	background: #ffffff;
+
+}
+
+.post_contaner{
+padding: 3px;
 background: #EEE;
 border-radius: 3px;
 }
 
+.comment_contaner_bubble {
+	width: 700px;
+	float: left;
+	margin: 20px 0;
+	padding-left: 60px;
+	position: relative;
+	background: #EEE;
+}
+
+.comment_contaner {
+	margin: 10px 0;
+	position: relative;
+
+}
+
+.search {
+	margin: 0;
+	float: right;
+}
+
+.comment_border{
+	padding: 3px;
+	background: #EEE;
+	border-radius: 3px;
+
+}
+
+.comment {
+	border: 1px solid #CACACA;
+	background: #ffffff;
+
+}
+
+.comment_header{
+	height: 33px;
+	padding: 0 10px 0 6px;
+	border-bottom: 1px solid #CCC;
+	background:-webkit-linear-gradient(#FAFAFA, #EAEAEA);
+}
+
+.comment_header_name {
+	margin: 0;
+float: left;
+max-width: 600px;
+font-size: 12px;
+height: 33px;
+line-height: 33px;
+text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.7);
+overflow: hidden;
+white-space: nowrap;
+text-overflow: ellipsis;
+}
+.form_header{
+margin: 0;
+float: left;
+max-width: 600px;
+font-size: 15px;
+height: 33px;
+line-height: 33px;
+text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.7);
+overflow: hidden;
+white-space: nowrap;
+text-overflow: ellipsis;
+
+}
+
+.comment_header_t_stamp {
+	float: right;
+margin: 0;
+font-size: 11px;
+height: 33px;
+line-height: 33px;
+
+}
+.comment_body {
+padding: 10px;
+font-size: 13px;
+overflow: auto;
+width: 100%;
+box-sizing: border-box;
+}
+
+.comment_form_body{
+	height: 100px;
+	width: 99%;
+}
+
+.comment_form_contaner{
+	padding: 10px;
+
+
+}
+
+
 .side_bar {
 	width: 300px;
 	float: right;
+}
+.side_bar_contaner{
+	height: 350px;
+	border-bottom: 1px solid #E3E3E8;
+	border-top: 1px solid #E3e3E8;
+
+
 }
 
 .post{
@@ -191,3 +319,24 @@ display: block;
         .pagination .next_page {
 
         }
+
+
+footer {
+	padding-top: 50px;
+padding-bottom: 50px;
+}
+.footer_banner{
+height: 160px;	
+border-top: 1px solid #E0E0E0;
+border-bottom: 1px solid #E0E0E0;
+box-shadow: inset 0 -1px 0 white;
+background-color: #F8F8F8;
+
+}
+.footer_content{
+margin: 0 auto;
+width: 1020px;
+
+}
+
+.clearboth{clear:both;}
