--- a/app/views/posts/_comment.html.erb
+++ b/app/views/posts/_comment.html.erb
@@ -1,5 +1,11 @@
-<div class="comment">
-  <h4>Comment by <%= comment.author_name %></h4>
-  <p><%= comment.body %></p>
-  <p>Posted <%= time_ago_in_words(comment.created_at) %> ago</p>
+<div class="comment_contaner" > 
+<div class= "comment_border">
+<div class= "comment">
+  <div class = "comment_header">
+  <p class="comment_header_name"><%= comment.author_name %> commented</p>
+  <p class="comment_header_t_stamp">Posted <%= time_ago_in_words(comment.created_at) %> ago</p>
+  </div>
+  <p class="comment_body"><%= comment.body %></p>
+</div>
+</div>
 </div>
