--- a/app/views/posts/_comment_form.html.erb
+++ b/app/views/posts/_comment_form.html.erb
@@ -1,16 +1,23 @@
-<h3>Post a Comment</h3>
-
+<div class= "comment_border">
+<div class= "comment">
+<div class = "comment_header">
+<p class = "form_header">Post a Comment</p>
+</div>
 <%= form_for @comment do |f| %>
   <%= f.hidden_field :post_id %>
   <p>
+    <div class = "comment_form_contaner">
     <%= f.label :author_name, "Name" %><br/>
     <%= f.text_field :author_name %>
   </p>
   <p>
     <%= f.label :body, "Comment" %><br/>
-    <%= f.text_area :body %>
+    <%= f.text_area :body, :class => "comment_form_body" %>
   </p>
   <p>
     <%= f.submit 'Submit' %>
   </p>
 <% end %>
+</div>  
+</div>
+</div>
