--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -16,7 +16,7 @@
                         <div class = "sample_body_img">
                             <p class = "post_body_sample"> 
                                 <%= truncate(post.body, :length => 635, :separator => ' ', :omission => '... ' ) %>
-                                <%= link_to "(continued)", post_path(post), :class => 'post_title', :id => "post_#{post.id}" %>
+                                <%= link_to "(continued)", post_path(post), :class => 'continued'%>
                             </p>
                         </div>
 
@@ -25,7 +25,7 @@
                         <div class = "sample_body">
                             <p class = "post_body_sample"> 
                                 <%= truncate(post.body, :length => 1000, :separator => ' ', :omission => '... ' ) %>
-                                <%= link_to "(continued)", post_path(post), :class => 'post_title', :id => "post_#{post.id}" %>
+                                <%= link_to "(continued)", post_path(post), :class => 'continued'%>
                             </p>
                         </div>
                     <% end %>    
