--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,13 @@
     <div class="side_bar">
     	<div class= "side_bar_contaner">
 	   		<div class= "side_bar_bio">
+	   						<img src="/img/face.jpeg" alt="face" class="face"/>
+	   						<div class="socal_bar">
+	   							<img src="/img/facebook.png" alt="facebook" class="socal_facebook"/>
+	   							<img src="/img/twitter.png" alt="twitter" class="social_twitter"/>
+	   							<img src="/img/google.png" alt="google" class="social_google"/>
+	   							<img src="/img/rss.png" alt="rss" class="social_rss"/>
+	   						</div>	
 	   		</div>	
    		</div>
     </div>
@@ -37,7 +44,6 @@
 	<footer>
 		<div class="footer_banner">
 		<div = class="footer_content">
-
 		</div>	
 		</div>
 	</footer>
