added rss and links to media bar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,11 +29,12 @@
 	   		<div class= "side_bar_bio">
 	   						<img src="/img/face.jpeg" alt="face" class="face"/>
 	   						<div class="socal_bar">
-	   							<img src="/img/facebook.png" alt="facebook" class="socal_facebook"/>
-	   							<img src="/img/twitter.png" alt="twitter" class="social_twitter"/>
-	   							<img src="/img/google.png" alt="google" class="social_google"/>
-	   							<img src="/img/rss.png" alt="rss" class="social_rss"/>
+	   							<a href="http://www.facebook.com/seth.dowden"><img src="/img/facebook.png" alt="facebook" class="socal_facebook"/></a>
+	   							<a href="https://twitter.com/SethClarkDowden"><img src="/img/twitter.png" alt="twitter" class="social_twitter"/></a>
+	   							<a href="https://github.com/sethclarkdowden"><img src="/img/github.png" alt="github" class="social_google"/></a>
+	   							<a href="localhost:3000/posts.rss"><img src="/img/rss.png" alt="rss" class="social_rss"/></a>
 	   						</div>	
+
 	   		</div>	
    		</div>
     </div>
